# gaokao-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json  worker.js  wrangler.toml
.github/workflows/: crawl-data.yml
api/: chat.py  stats.py
app/: __init__.py  config.py  ui.py
app/agent/: __init__.py  graph.py  prompts.py
app/api/: __init__.py  server.py
app/crawler/: gaokao_cn.py
app/data/: database.py
app/models/: schemas.py
app/tools/: __init__.py  admission_query.py  college_compare.py  college_search.py  major_recommend.py  policy_interpret.py  probability_calc.py  score_analysis.py  strategy_suggest.py
data/: gaokao.db
docs/: chat.html  index.html
scripts/: check_db.py  quick_start.ps1  seed_demo_data.py  seed_full_data.py  show_schema.py  test_recommend.py  vacuum_db.py
