[project]
name = "gaokao-agent"
version = "0.1.0"
description = "高考志愿填报 AI Agent - 基于 LangGraph ReAct 架构的智能填报助手"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlite-utils>=3.36",
    "pydantic>=2.9.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
